# Rescue26_Firmware

./: CLAUDE.md  platformio.ini
include/: config.h  robot_types.h
install/: local_setup.sh  setup.sh
lib/CANInterface/: CANInterface.cpp  CANInterface.h
lib/Comms/: Comms.cpp  Comms.h
lib/Control/: Control.cpp  Control.h
lib/Encoders/: Encoders.cpp  Encoders.h
lib/Locomotion/: Locomotion.cpp  Locomotion.h
lib/RC/: RC.cpp  RC.h
lib/Sensors/: Sensors.cpp  Sensors.h
log/: latest_build
ros_node/: robot_serial_bridge.py
src/: main.cpp
tools/can_brushless/: CAN_FS_IA6B.ino  CAN_SET_CURRENT.ino  fixed_speed.ino  rc_speed.ino
tools/esp32_bridge/: package.xml  setup.py
tools/esp32_bridge/esp32_bridge/: esp32_bridge_node.py
tools/esp32_bridge/launch/: bridge.launch.py
tools/ppm_emulator/: ppm_emulator.ino
tools/scripts/: test.py
