<?xml version="1.0"?>
<package format="3">
  <name>esp32_bridge</name>
  <version>0.1.0</version>
  <description>
    ROS2 Humble bridge node that communicates with the rescue robot ESP32 over
    UART binary protocol and publishes all robot data as ROS2 topics.
  </description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
